<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/feltgreen">

    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/rules_title"
        android:textColor="@color/white"
        android:shadowColor="@color/opaque"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        android:textSize="15dp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theplay_title"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:shadowColor="@color/opaque"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theplay"
        android:textSize="15dp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theshow_title"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:shadowColor="@color/opaque"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theshow"
        android:textSize="15dp"
        android:textColor="@color/white"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoring"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:shadowColor="@color/opaque"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoringduringplay"
        android:textSize="15dp"
        android:textColor="@color/white"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoringtheshow"
        android:textSize="15dp"
        android:textColor="@color/white"
    />
</LinearLayout>